--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.25.1"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.1"
 
+
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.27.0"
+
+
 }
