--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id("com.google.dagger.hilt.android")
+
 }
 
 android {
@@ -46,7 +49,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
@@ -64,7 +66,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.25.1"
 
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.5.2"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.navigation:navigation-ui:2.5.3"
 
     //coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.2")
@@ -73,9 +76,18 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager:0.25.1"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.25.1"
 
-
+    //reflect
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
+
+    //flowLayouts
     implementation "com.google.accompanist:accompanist-flowlayout:0.27.0"
 
+    //hilt
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+}
 
+kapt {
+    correctErrorTypes true
 }
