--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         compose_version = '1.2.1'
         compose_compiler_version = '1.3.1'
     }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
