--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-appcheck-playintegrity:16.1.0'
     implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
 
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
 }
 
